Добавил линейную регрессию

--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -28,13 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -396,6 +397,70 @@
     "sns.pairplot(df, height = 6)\n",
     "plt.show();"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(картинка генерится качественная нужно просто просмотреть не через ноутбук)\n",
+    "\n",
+    "Из графиков выше видно что между почти всеми параметрами прослеживается кореляция. Так же оказалась верна наша догадка насчет пола и их числовых эквивалентов."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_data, Y_data = df.loc[:,:\"Shell\"], df[\"Rings\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Оценка линейной регрессии: 0.5333737952865097\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg = LinearRegression().fit(X_data, Y_data)\n",
+    "print(\"Оценка линейной регрессии:\", reg.score(X_data, Y_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если судить по документации sklearn то идеальная модель линейной регрессии выдаст оценку близкую к единице. В нашем случае мы видим что наша модель близка к простому угадыванию."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
