--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -28,14 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -409,29 +410,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_data, Y_data = df.loc[:,:\"Shell\"], df[\"Rings\"]"
+    "X_data, Y_data = df.loc[:,:\"Shell\"], df[\"Rings\"]\n",
+    "\n",
+    "X_train,  X_test,  y_train,  y_test =  train_test_split(X_data, Y_data,  test_size= 0.20,  random_state= 42 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оценка линейной регрессии: 0.5333737952865097\n"
+      "Оценка линейной регрессии: 0.5434892897754016\n"
      ]
     }
    ],
    "source": [
-    "reg = LinearRegression().fit(X_data, Y_data)\n",
-    "print(\"Оценка линейной регрессии:\", reg.score(X_data, Y_data))"
+    "reg = LinearRegression().fit(X_train, y_train)\n",
+    "print(\"Оценка линейной регрессии:\", reg.score(X_test, y_test))"
    ]
   },
   {
