Добавил полиномиальную регрессию

--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -441,22 +442,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Если судить по документации sklearn то идеальная модель линейной регрессии выдаст оценку близкую к единице. В нашем случае мы видим что наша модель близка к простому угадыванию."
+    "Если судить по документации sklearn то идеальная модель линейной регрессии выдаст оценку близкую к единице. В нашем случае мы видим что наша модель близка к простому угадыванию. Если снова взглянуть на графики то появляется предположение что в данном случае нам поможет полином второй степени."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Оценка полиномиальной регрессии: 0.5510137630154758\n"
+     ]
+    }
+   ],
+   "source": [
+    "poly = PolynomialFeatures(degree = 2)\n",
+    "reg_2 = LinearRegression()\n",
+    "\n",
+    "reg_2.fit(poly.fit_transform(X_train), y_train)\n",
+    "\n",
+    "print(\"Оценка полиномиальной регрессии:\", reg_2.score(poly.transform(X_test), y_test))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Результат практически не изменился - пришло время нейронок"
+   ]
   },
   {
    "cell_type": "code",
