--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -471,22 +472,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Результат практически не изменился - пришло время нейронок"
+    "Результат практически не изменился - пришло время нейронок (нет)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "params: {'kernel': 'linear'}\n",
+      "Оценка SVC: 0.2631578947368421\n",
+      "params: {'kernel': 'poly'}\n",
+      "Оценка SVC: 0.27392344497607657\n",
+      "params: {'kernel': 'rbf'}\n",
+      "Оценка SVC: 0.3050239234449761\n",
+      "params: {'kernel': 'sigmoid'}\n",
+      "Оценка SVC: 0.13516746411483255\n"
+     ]
+    }
+   ],
+   "source": [
+    "for params in [{'kernel': 'linear'}, {'kernel': 'poly'}, {'kernel': 'rbf'}, {'kernel': 'sigmoid'},]:\n",
+    "    clf = SVC(**params)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    print(\"params:\", params)\n",
+    "    print(\"Оценка SVC:\", clf.score(X_test, y_test))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Возможно я где-то накосячил с параметрами, но результат хуже чем с линейной регрессией "
+   ]
   }
  ],
  "metadata": {
