Слегка изменил тестирование SVC

--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -486,8 +486,8 @@
      "text": [
       "params: {'kernel': 'linear'}\n",
       "Оценка SVC: 0.2631578947368421\n",
-      "params: {'kernel': 'poly'}\n",
-      "Оценка SVC: 0.27392344497607657\n",
+      "params: {'kernel': 'poly', 'degree': 2}\n",
+      "Оценка SVC: 0.2715311004784689\n",
       "params: {'kernel': 'rbf'}\n",
       "Оценка SVC: 0.3050239234449761\n",
       "params: {'kernel': 'sigmoid'}\n",
@@ -496,7 +496,11 @@
     }
    ],
    "source": [
-    "for params in [{'kernel': 'linear'}, {'kernel': 'poly'}, {'kernel': 'rbf'}, {'kernel': 'sigmoid'},]:\n",
+    "for params in [\n",
+    "    {'kernel': 'linear'}, \n",
+    "    {'kernel': 'poly', 'degree': 2}, \n",
+    "    {'kernel': 'rbf'}, \n",
+    "    {'kernel': 'sigmoid'}]:\n",
     "    clf = SVC(**params)\n",
     "    clf.fit(X_train, y_train)\n",
     "    print(\"params:\", params)\n",
