--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -39,7 +39,9 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.svm import SVC, SVR, LinearSVR, NuSVR\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import *"
+    "from sklearn.metrics import *\n",
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor, VotingRegressor, AdaBoostRegressor"
    ]
   },
   {
@@ -425,22 +427,24 @@
    "source": [
     "X_data, Y_data = df.loc[:,:\"Shell\"], df[\"Rings\"]\n",
     "\n",
-    "X_train,  X_test,  y_train,  y_test =  train_test_split(X_data, Y_data,  test_size= 0.20,  random_state= 42 )"
+    "X_train,  X_test,  y_train,  y_test =  train_test_split(X_data, Y_data,  test_size= 0.20,  random_state= 42 )\n",
+    "splited_data = [X_train, y_train, X_test, y_test]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_model(train_X, train_y, test_X, test_y, model, params=[{}]):\n",
+    "def test_model(train_X, train_y, test_X, test_y, model, params=[{}], sep='', show_params=True):\n",
     "    for param in params:\n",
     "        test_model = model(**param)\n",
     "        test_model.fit(train_X, train_y)\n",
-    "        if params != [{}]:\n",
+    "        if params != [{}] and show_params:\n",
     "            print(\"Параметры:\", param)\n",
-    "        print(\"Оценка:\", mean_absolute_error(test_model.predict(test_X), test_y))"
+    "        print(\"Оценка:\", mean_absolute_error(test_model.predict(test_X), test_y))\n",
+    "        print(end=sep)"
    ]
   },
   {
@@ -569,11 +573,11 @@
      "output_type": "stream",
      "text": [
       "Параметры: {'C': 1.0, 'max_iter': 10000}\n",
-      "Оценка: 1.6002247936371146\n",
+      "Оценка: 1.6001216071343214\n",
       "Параметры: {'C': 5.0, 'max_iter': 10000}\n",
-      "Оценка: 1.5957220468377238\n",
+      "Оценка: 1.5959019231546494\n",
       "Параметры: {'C': 125.0, 'max_iter': 10000}\n",
-      "Оценка: 1.6048301951919068\n"
+      "Оценка: 1.6045745976795693\n"
      ]
     },
     {
@@ -589,7 +593,7 @@
      "output_type": "stream",
      "text": [
       "Параметры: {'C': 625.0, 'max_iter': 10000}\n",
-      "Оценка: 1.6072934172026363\n"
+      "Оценка: 1.6063977903311004\n"
      ]
     },
     {
@@ -605,7 +609,7 @@
      "output_type": "stream",
      "text": [
       "Параметры: {'C': 2500.0, 'max_iter': 10000}\n",
-      "Оценка: 1.617624024033675\n"
+      "Оценка: 1.606538949235911\n"
      ]
     },
     {
@@ -621,9 +625,9 @@
      "output_type": "stream",
      "text": [
       "Параметры: {'C': 12500.0, 'max_iter': 10000}\n",
-      "Оценка: 1.6569756374112856\n",
-      "Параметры: {'C': 62500.0, 'max_iter': 100000}\n",
-      "Оценка: 1.6038022447887532\n"
+      "Оценка: 1.6591037782285476\n",
+      "Параметры: {'C': 62500.0, 'max_iter': 10000}\n",
+      "Оценка: 1.8452733111140718\n"
      ]
     },
     {
@@ -643,14 +647,14 @@
     "    {'C':625.0, 'max_iter':10000},\n",
     "    {'C':2500.0, 'max_iter':10000},\n",
     "    {'C':12500.0, 'max_iter':10000},\n",
-    "    {'C':62500.0, 'max_iter':100000},]\n",
+    "    {'C':62500.0, 'max_iter':10000},]\n",
     "\n",
     "test_model(X_train, y_train, X_test, y_test, LinearSVR, params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -691,6 +695,247 @@
    "metadata": {},
    "source": [
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для решения задач класификации также отлично подходят деревья"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Параметры: {'max_depth': 1}\n",
+      "Оценка: 2.089449706375674\n",
+      "Параметры: {'max_depth': 2}\n",
+      "Оценка: 1.9400103026581252\n",
+      "Параметры: {'max_depth': 3}\n",
+      "Оценка: 1.8031662693121278\n",
+      "Параметры: {'max_depth': 4}\n",
+      "Оценка: 1.695697224199668\n",
+      "Параметры: {'max_depth': 5}\n",
+      "Оценка: 1.6257537340032628\n",
+      "Параметры: {'max_depth': 6}\n",
+      "Оценка: 1.630173074166313\n",
+      "Параметры: {'max_depth': 7}\n",
+      "Оценка: 1.6203198390350642\n",
+      "Параметры: {'max_depth': 8}\n",
+      "Оценка: 1.6383048831657472\n",
+      "Параметры: {'max_depth': 9}\n",
+      "Оценка: 1.6931701179910197\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = [{\"max_depth\":x} for x in range(1,10)]\n",
+    "test_model(*splited_data, tree.DecisionTreeRegressor, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Параметры: {'random_state': 42, 'n_estimators': 1}\n",
+      "Оценка: 2.2887001060641357\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 3}\n",
+      "Оценка: 2.1392210460966536\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 5}\n",
+      "Оценка: 2.019026604458836\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 7}\n",
+      "Оценка: 1.9255469631493611\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 9}\n",
+      "Оценка: 1.8479655518250573\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 10}\n",
+      "Оценка: 1.822237094124084\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 30}\n",
+      "Оценка: 1.6124881979126187\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 50}\n",
+      "Оценка: 1.5906794330351408\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 70}\n",
+      "Оценка: 1.5876515806335443\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 90}\n",
+      "Оценка: 1.5888367352294361\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 100}\n",
+      "Оценка: 1.5895295737014024\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 200}\n",
+      "Оценка: 1.607880202462231\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 300}\n",
+      "Оценка: 1.6213000203027659\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 400}\n",
+      "Оценка: 1.6275538558382265\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 500}\n",
+      "Оценка: 1.6342205285843256\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 600}\n",
+      "Оценка: 1.6405127360591276\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 700}\n",
+      "Оценка: 1.6463941149737717\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 800}\n",
+      "Оценка: 1.6582633496921786\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = [{'random_state':42, \"n_estimators\":x} for x in (\n",
+    "    list(range(1,10,2)) + list(range(10,100,20)) + list(range(100,900,100)))\n",
+    "]\n",
+    "test_model(*splited_data, GradientBoostingRegressor, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Параметры: {'random_state': 42, 'n_estimators': 1}\n",
+      "Оценка: 2.0574162679425836\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 3}\n",
+      "Оценка: 1.7886762360446573\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 5}\n",
+      "Оценка: 1.7177033492822966\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 7}\n",
+      "Оценка: 1.7084757347915243\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 9}\n",
+      "Оценка: 1.6735778841042\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 10}\n",
+      "Оценка: 1.6717703349282296\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 30}\n",
+      "Оценка: 1.6340510366826155\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 50}\n",
+      "Оценка: 1.6197368421052631\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 70}\n",
+      "Оценка: 1.6207792207792207\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 90}\n",
+      "Оценка: 1.6207070707070705\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 100}\n",
+      "Оценка: 1.6225119617224881\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 200}\n",
+      "Оценка: 1.6108552631578947\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 300}\n",
+      "Оценка: 1.6102272727272728\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 400}\n",
+      "Оценка: 1.610272129186603\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 500}\n",
+      "Оценка: 1.607622009569378\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 600}\n",
+      "Оценка: 1.6089493620414674\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 700}\n",
+      "Оценка: 1.6077614490772385\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 800}\n",
+      "Оценка: 1.607141148325359\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = [{'random_state':42, \"n_estimators\":x} for x in (\n",
+    "    list(range(1,10,2)) + list(range(10,100,20)) + list(range(100,900,100)))\n",
+    "]\n",
+    "\n",
+    "test_model(*splited_data, RandomForestRegressor, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Параметры: {'random_state': 42, 'n_estimators': 1}\n",
+      "Оценка: 1.792920441089259\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 3}\n",
+      "Оценка: 1.7858829564269003\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 5}\n",
+      "Оценка: 1.8541696867586082\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 7}\n",
+      "Оценка: 1.9292596918956613\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 9}\n",
+      "Оценка: 1.985623164625785\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 10}\n",
+      "Оценка: 2.026924111972218\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 30}\n",
+      "Оценка: 2.4301538505817954\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 50}\n",
+      "Оценка: 2.65468101276089\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 70}\n",
+      "Оценка: 2.7292594296891517\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 90}\n",
+      "Оценка: 2.732670796990721\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 100}\n",
+      "Оценка: 2.7674608564780425\n",
+      "Параметры: {'random_state': 42, 'n_estimators': 200}\n",
+      "Оценка: 2.766038244838369\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = [{'random_state':42, \"n_estimators\":x} for x in (\n",
+    "    list(range(1,10,2)) + list(range(10,100,20)) + [100, 200])\n",
+    "]\n",
+    "test_model(*splited_data, AdaBoostRegressor, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Оценка: 1.5702080252027202\n",
+      "\n",
+      "\n",
+      "Оценка: 1.581299075070658\n",
+      "\n",
+      "\n",
+      "Оценка: 1.5904403446335038\n",
+      "\n",
+      "\n",
+      "Оценка: 1.5786854777997288\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "m1 = GradientBoostingRegressor(random_state = 42, n_estimators=95)\n",
+    "m2 = RandomForestRegressor(random_state = 42, n_estimators=300)\n",
+    "m3 = LinearRegression()\n",
+    "params = [\n",
+    "    {'estimators':[('gb', m1), ('rf', m2), ('lr', m3)]},\n",
+    "    {'estimators':[('gb', m1), ('rf', m2)]},\n",
+    "    {'estimators':[('gb', m1), ('lr', m3)]},\n",
+    "    {'estimators':[('rf', m2), ('lr', m3)]}\n",
+    "]\n",
+    "\n",
+    "test_model(*splited_data, VotingRegressor, params, sep=\"\\n\\n\", show_params=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь можно попробовать и нейросети"
    ]
   },
   {
