Добавил нейронную сеть

--- a/abalone.ipynb
+++ b/abalone.ipynb
@@ -935,15 +935,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Теперь можно попробовать и нейросети"
+    "Теперь можно попробовать и нейросети\n",
+    "\n",
+    "Далее все строится только на моих предположениях о том как выглядит функция в реале и интуиции"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "import tensorflow.keras as keras\n",
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.InputLayer(X_train.shape[1]),\n",
+    "    keras.layers.Dense(10, activation='sigmoid'),\n",
+    "    keras.layers.Dense(1)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_8\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_19 (Dense)             (None, 10)                80        \n",
+      "_________________________________________________________________\n",
+      "dense_20 (Dense)             (None, 1)                 11        \n",
+      "=================================================================\n",
+      "Total params: 91\n",
+      "Trainable params: 91\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "                        loss='mean_absolute_error',\n",
+    "                        metrics=['mae'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 3.9647 - mae: 3.9647\n",
+      "Epoch 2/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 3.1373 - mae: 3.1373\n",
+      "Epoch 3/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 2.5609 - mae: 2.5609\n",
+      "Epoch 4/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 2.2657 - mae: 2.2657\n",
+      "Epoch 5/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 2.1557 - mae: 2.1557\n",
+      "Epoch 6/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 2.1192 - mae: 2.1192\n",
+      "Epoch 7/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 2.0919 - mae: 2.0919\n",
+      "Epoch 8/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 2.0663 - mae: 2.0663\n",
+      "Epoch 9/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 2.0431 - mae: 2.0431\n",
+      "Epoch 10/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 2.0215 - mae: 2.0215\n",
+      "Epoch 11/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 2.0003 - mae: 2.0003\n",
+      "Epoch 12/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 1.9793 - mae: 1.9793\n",
+      "Epoch 13/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 1.9596 - mae: 1.9596\n",
+      "Epoch 14/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 1.9403 - mae: 1.9403\n",
+      "Epoch 15/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 1.9228 - mae: 1.9228\n",
+      "Epoch 16/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 1.9061 - mae: 1.9061\n",
+      "Epoch 17/20\n",
+      "105/105 [==============================] - 0s 3ms/step - loss: 1.8906 - mae: 1.8906\n",
+      "Epoch 18/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 1.8770 - mae: 1.8770\n",
+      "Epoch 19/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 1.8643 - mae: 1.8643\n",
+      "Epoch 20/20\n",
+      "105/105 [==============================] - 0s 4ms/step - loss: 1.8524 - mae: 1.8524\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x16d17119e80>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train, epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Оценка: 1.8340494096564335\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Оценка:\", mean_absolute_error(model.predict(X_test), y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Хуже чем у регресии :("
+   ]
   }
  ],
  "metadata": {
